--- a/Aquarium life/hi.lproj/Localizable.strings
+++ b/Aquarium life/hi.lproj/Localizable.strings
@@ -267,3 +267,7 @@
 "Every 60 days" = "हर 60 दिन";
 "Every 90 days" = "हर 90 दिन";
 //
+
+// v.1.4
+"Water change percentage" = "जल परिवर्तन प्रतिशत";
+//
